--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,37 +9,33 @@
 @import "global/_visually-hidden";
 
 // blocks
+@import "blocks/_section-text";
+@import "blocks/_svg-defs";
 @import "blocks/_btn";
-@import "blocks/_card";
 @import "blocks/_header";
-@import "blocks/_nav";
-@import "blocks/_burger";
 @import "blocks/_hero";
-
-@import "blocks/_facts";
-@import "blocks/_facts-card";
-@import "blocks/_bonus";
-@import "blocks/_checkmark";
-@import "blocks/_step-card";
+@import "blocks/_divider";
+@import "blocks/_table";
+@import "blocks/_table-container";
+@import "blocks/_slider";
+@import "blocks/_card";
+@import "blocks/_game-card";
+@import "blocks/_electric-card";
+@import "blocks/_content-list";
+@import "blocks/_review";
 @import "blocks/_faq";
-@import "blocks/_big-cta";
+@import "blocks/_cta";
 @import "blocks/_footer";
-@import "blocks/_banner";
-@import "blocks/_steps";
+@import "blocks/_hero-description";
+@import "blocks/_features";
+@import "blocks/_info";
 @import "blocks/_games";
-@import "blocks/_sports";
-
-@import "blocks/_payments";
-@import "blocks/_reviews";
-@import "blocks/_support";
-@import "blocks/_mobile";
-@import "blocks/_why";
-
-@import "blocks/_section-nav";
-@import "blocks/_section-cta";
-@import "blocks/_safety";
-@import "blocks/_gaming-policy";
-@import "blocks/_wheel";
-@import "blocks/_popup";
-@import "blocks/_spin-btn";
+@import "blocks/_bonus";
 @import "blocks/_registration";
+@import "blocks/_catalog";
+@import "blocks/_sports-betting";
+@import "blocks/_gamification";
+@import "blocks/_payment";
+@import "blocks/_support";
+@import "blocks/_what";
+@import "blocks/_about";
