--- a/scss/global/_mixins.scss
+++ b/scss/global/_mixins.scss
@@ -1,5 +1,4 @@
-@import "variables";
-
+// ================= MEDIA QUERIES =================
 @mixin vp-1023 {
     @media (max-width: $vp-tablet) {
         @content;
@@ -14,6 +13,13 @@
 
 @mixin vp-480 {
     @media (max-width: $vp-small) {
+        @content;
+    }
+}
+
+// ================= DESKTOP ONLY =================
+@mixin desktop-only {
+    @media (min-width: 993px) {
         @content;
     }
 }
