--- a/scss/blocks/_slider.scss
+++ b/scss/blocks/_slider.scss
@@ -14,6 +14,10 @@
         &::-webkit-scrollbar {
             display: none;
         }
+
+        @include vp-767 {
+            padding: 28px 0 16px 0;
+        }
     }
 
     &__arrow {
