--- a/scss/blocks/_gamification.scss
+++ b/scss/blocks/_gamification.scss
@@ -39,6 +39,31 @@
         }
     }
 
+    &__subtitle {
+        font-size: 24px;
+        font-weight: 900;
+        color: #ff9a00;
+        margin: 0 0 30px 0;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: -16px;
+            left: 0;
+            width: 50px;
+            height: 4px;
+            border-radius: 2px;
+            background: linear-gradient(
+                90deg,
+                transparent,
+                #ff9a00,
+                transparent
+            );
+            box-shadow: 0 0 20px rgba(255, 150, 0, 0.8);
+        }
+    }
+
     &__text {
         font-size: 16px;
         max-width: 720px;
