--- a/scss/blocks/_gamification.scss
+++ b/scss/blocks/_gamification.scss
@@ -7,6 +7,10 @@
         flex-direction: column;
         gap: 40px;
 
+        .btn {
+            margin: 0 auto;
+        }
+
         @include vp-767 {
             gap: 32px;
         }
